--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <section id="hero" class="relative bg-gradient-to-r from-blue-600 to-indigo-700 text-white py-24 px-4 text-center rounded-b-xl shadow-lg">
         <div class="container mx-auto">
             <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-6">
-                Your Partner for Business Growth in Etobicoke
+                Empowering Small Businesses to Scale Locally and Globally.
             </h1>
             <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto opacity-90">
-                Providing tailored consulting solutions to empower small and medium-sized businesses for sustainable success and competitive advantage.
+                Expert consulting in software testing, AI-driven operations, and business growth strategies.
             </p>
             <a href="#contact" class="bg-white text-blue-700 hover:bg-blue-100 font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 transform hover:scale-105">
-                Schedule a Free Consultation
+                Book online
             </a>
         </div>
         <!-- Simple background pattern for visual interest -->
