text change part 2

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
         <div class="container mx-auto flex flex-col md:flex-row justify-between items-center px-4">
             <a href="#hero" class="text-2xl font-bold text-blue-700 mb-2 md:mb-0">Etobicoke Business Consulting</a>
             <div class="space-x-4">
-                <a href="#offerings" class="text-gray-600 hover:text-blue-700 transition duration-300">Our Offerings</a>
-                <a href="#skills" class="text-gray-600 hover:text-blue-700 transition duration-300">My Expertise</a>
-                <a href="#contact" class="text-gray-600 hover:text-blue-700 transition duration-300">Contact Us</a>
+                <!-- Restored "Offerings" link -->
+                <a href="#offerings" class="text-gray-600 hover:text-blue-700 transition duration-300">Offerings</a>
+                <a href="#aboutUs" class="text-gray-600 hover:text-blue-700 transition duration-300">About Us</a>
+                <a href="#ourExpertise" class="text-gray-600 hover:text-blue-700 transition duration-300">Our Expertise</a>
+                <!-- Added "Contact" link at the end -->
+                <a href="#contact" class="text-gray-600 hover:text-blue-700 transition duration-300">Contact</a>
             </div>
         </div>
     </nav>
@@ -52,8 +55,9 @@
             <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto opacity-90">
                 Expert consulting in software testing, AI-driven operations, and business growth strategies.
             </p>
+            <!-- The 'Book online' button, linked to the '#contact' section -->
             <a href="#contact" class="bg-white text-blue-700 hover:bg-blue-100 font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 transform hover:scale-105">
-                Book online
+                Book Online
             </a>
         </div>
         <!-- Simple background pattern for visual interest -->
@@ -105,10 +109,53 @@
         </div>
     </section>
 
-    <!-- Skills Section -->
-    <section id="skills" class="py-20 px-4 bg-blue-700 text-white rounded-lg shadow-lg mx-4 my-8 md:my-12">
+    <!-- New About Us Section -->
+    <section id="aboutUs" class="py-20 px-4 bg-gray-50 text-gray-800 rounded-lg shadow-inner mx-4 my-8 md:my-12">
+        <div class="container mx-auto text-center max-w-3xl">
+            <h2 class="text-4xl font-bold text-gray-800 mb-12">Our Story</h2>
+            <p class="text-lg mb-4">
+                Etobicoke Business Consulting was born from a vision to bridge the gap between cutting-edge technology and ethical business practices. Our journey began when our founders, seasoned professionals in software testing and network infrastructure, recognized a critical need in the market: businesses were struggling to navigate the rapidly evolving digital landscape while maintaining their core values and operational integrity.
+            </p>
+            <p class="text-lg mb-4 font-semibold">
+                The Spark
+            </p>
+            <p class="text-lg mb-4">
+                With years of experience in the trenches of technology development and a passion for ethical leadership honed in the non-profit sector, we saw an opportunity to make a difference. We realized that our unique combination of technical expertise and strong interpersonal skills could help businesses not just survive, but thrive in the digital age.
+            </p>
+            <p class="text-lg mb-4 font-semibold">
+                Our Mission Takes Shape
+            </p>
+            <p class="text-lg mb-4">
+                In 2019, we launched EBC with a clear mission: to provide transformative, ethically-grounded technology solutions to businesses that want to make a positive impact. We started small, focusing on local Ottawa businesses and tech startups, helping them leverage digital tools to scale their operations and reach.
+            </p>
+            <p class="text-lg mb-4 font-semibold">
+                Growing with Purpose
+            </p>
+            <p class="text-lg mb-4">
+                As word spread about our unique approach – blending technical acumen with a strong ethical framework – we began to attract a diverse clientele. From non-profits seeking to maximize their impact through technology to small software companies looking to scale, our expertise found resonance across various sectors.
+            </p>
+            <p class="text-lg mb-4 font-semibold">
+                Where We Are Today
+            </p>
+            <p class="text-lg mb-4">
+                Today, EBC stands as a beacon for businesses seeking not just technological advancement, but a partner who understands the human side of digital transformation. Our team has grown, but our core values remain the same: a commitment to excellence, ethical practices, and a deeply personal approach to every client relationship.
+            </p>
+            <p class="text-lg mb-8 font-semibold">
+                Looking to the Future
+            </p>
+            <p class="text-lg mb-8">
+                As we look ahead, we're excited about the possibilities that emerging technologies like Generative and Predictive Artificial Intelligence offer to our clients. We're committed to staying at the forefront of these developments, always with an eye on how they can be leveraged ethically and effectively to drive business growth and positive change.
+            </p>
+            <p class="text-lg mb-0 font-semibold">
+                At EBC, we're not just consultants – we're partners in your journey towards a more efficient, ethical, and technologically empowered future. Our story is still being written, and we invite you to be a part of it.
+            </p>
+        </div>
+    </section>
+
+    <!-- Our Expertise Section -->
+    <section id="ourExpertise" class="py-20 px-4 bg-blue-700 text-white rounded-lg shadow-lg mx-4 my-8 md:my-12">
         <div class="container mx-auto text-center">
-            <h2 class="text-4xl font-bold mb-12">My Expertise & Core Skills</h2>
+            <h2 class="text-4xl font-bold mb-12">Our Expertise & Core Skills</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Skill 1: Market Analysis -->
                 <div class="bg-blue-600 p-6 rounded-xl shadow-md border border-blue-500 hover:shadow-lg transform hover:-translate-y-1 transition duration-300">
@@ -148,9 +195,25 @@
     <section id="contact" class="py-20 px-4 bg-gray-50 rounded-lg shadow-inner mx-4 my-8 md:my-12">
         <div class="container mx-auto text-center max-w-2xl">
             <h2 class="text-4xl font-bold text-gray-800 mb-12">Let's Connect & Grow Together</h2>
-            <p class="text-lg text-gray-700 mb-8">
-                Ready to discuss your business challenges and explore how Etobicoke Business Consulting can help you thrive? Reach out today for a complimentary discussion!
+            <p class="text-lg text-gray-700 mb-4">
+                To Leaders,
             </p>
+            <p class="text-lg text-gray-700 mb-4">
+                At Etobicoke Business Consulting, we measure success by the outcomes we achieve—not by the hours spent. We are committed to helping you reach your most ambitious objectives, but this journey requires honest effort and candid conversation.
+            </p>
+            <p class="text-lg text-gray-700 mb-4">
+                Expect direct, no-nonsense discussions. We are change makers who operate with intellectual rigor and mutual respect. If you’re ready to work hard and challenge yourself, we’re here to help you transform your people, processes, and ideas for lasting impact.
+            </p>
+            <p class="text-lg text-gray-700 mb-8">
+                We are not in the business of searching for or creating “the best.” Instead, we focus on making people, processes, and ideas truly great—because greatness endures far longer than fleeting, top-tier performance.
+            </p>
+            <p class="text-lg text-gray-700 mb-8 font-semibold">
+                Serious inquiries only. Together, let’s achieve greatness that lasts.
+            </p>
+            <p class="text-lg text-gray-700 mb-8">
+                Team Etobicoke Business Consulting
+            </p>
+
             <div class="bg-white p-8 rounded-xl shadow-md border border-gray-100">
                 <form action="https://formspree.io/f/yourformid" method="POST" class="space-y-6">
                     <!-- Replace 'yourformid' with your actual Formspree form ID. Instructions for Formspree below. -->
@@ -172,10 +235,8 @@
                 </form>
                 <div class="mt-8 text-center text-gray-700">
                     <p class="text-lg font-semibold">Prefer to speak directly?</p>
-                    <p class="mt-2">Email: <a href="mailto:info@etobicokebusinessconsulting.com" class="text-blue-600 hover:underline">info@etobicokebusinessconsulting.com</a></p>
-                    <p>Phone: <a href="tel:+14165551234" class="text-blue-600 hover:underline">+1 (416) 555-1234</a></p>
-                    <p class="mt-2">Location: Etobicoke, Toronto, ON</p>
-                    <!-- Remember to replace with your actual email, phone, and location -->
+                    <p class="mt-2">Email: <a href="mailto:ebc-contact@gmail.com" class="text-blue-600 hover:underline">ebc-contact@gmail.com</a></p>
+                    <p>Phone: <a href="tel:+16138514408" class="text-blue-600 hover:underline">+1-613-851-4408</a></p>
                 </div>
             </div>
         </div>
