corrected contact details in contact section

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                 </form>
                 <div class="mt-8 text-center text-gray-700">
                     <p class="text-lg font-semibold">Prefer to speak directly?</p>
-                    <p class="mt-2">Email: <a href="mailto:drashtymajmudar@gmail.com" class="text-blue-600 hover:underline">drashtymajmudar@gmail.com</a></p>
-                    <p>Phone: <a href="tel:+16128514409" class="text-blue-600 hover:underline">+1 (612) 851-4409</a></p>
+                    <p class="mt-2">Email: <a href="mailto:vaishnavshivang@gmail.com" class="text-blue-600 hover:underline">vaishnavshivang@gmail.com</a></p>
+                    <p>Phone: <a href="tel:+16138514408" class="text-blue-600 hover:underline">+1 (613) 851-4408</a></p>
                 </div>
             </div>
         </div>
